[gd_scene load_steps=5 format=3 uid="uid://2ece3j57fr7"]

[ext_resource type="Script" path="res://features/punnett-square/nodes/main/main.gd" id="1_n5my5"]
[ext_resource type="PackedScene" uid="uid://lo2b1wr3x5vp" path="res://scenes/guis/tutorial_button.tscn" id="2_ihaqi"]
[ext_resource type="FontFile" uid="uid://na1wmldontft" path="res://features/theme/fonts/FiraCode-Bold.ttf" id="3_t15rp"]
[ext_resource type="PackedScene" uid="uid://cywpj0ki4ld5j" path="res://scenes/guis/pause_button.tscn" id="4_mc0ig"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n5my5")

[node name="TutorialButton" parent="." instance=ExtResource("2_ihaqi")]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="Timer" type="Timer" parent="."]

[node name="Countdown" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("3_t15rp")
theme_override_font_sizes/font_size = 75

[node name="EndGame" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -387.0
offset_top = -206.5
offset_right = 387.0
offset_bottom = 206.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -806.0
offset_top = -300.0
offset_right = 806.0
offset_bottom = -0.00012207
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "You have 60 second to fill 
the Punnett Square"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 25.0
offset_right = 200.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="StartScreen/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Ready"

[node name="PauseButton" parent="." instance=ExtResource("4_mc0ig")]
visible = false
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 180.0
offset_top = 40.0
offset_right = 380.0
offset_bottom = 134.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="StartScreen/PanelContainer/Button" to="." method="_on_button_pressed"]
